--- a/170208_webdev.html
+++ b/170208_webdev.html
@@ -46,8 +46,8 @@
     <section id="accolades">
         <h3>Accolades</h3>
         <p>
-          상탄거를 말하는거같은데 엄청길게쓰면 한번에 보기ㄷ힘드니까 이걸 두줄로
-          나눠서 쓰는게 좋다고 한다. 누가? 교수님이 그래요 하하하하ㅏ ㅇㅇㅇ
+          길게 쓰면 안되니까 두줄로 나누어쓰기 길게 쓰면 안되니까 두줄로 나누어쓰기
+		  길게 쓰면 안되니까 두줄로 나누어쓰기 길게 쓰면 안되니까 두줄로 나누어쓰기
         </p>
     </section>
     <footer>
